fix: potential bug fix for ios flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,8 +31,12 @@ body {
   .animate-scroll {
     animation: scroll 20s linear infinite;
     will-change: transform;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    /* Crucial for iOS Safari */
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  
+  .animate-scroll img {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
   }
 }
